test/typecheck/errors/bad-views4.boa
view sv2 {
	o: output sum of int;
	s := 2;

	o << 0;
}

v := sv2/o;

c := v._c;